[project]
name = "anolis-telemetry-export"
version = "0.1.0"
description = "Telemetry export service for the Anolis bioreactor runtime"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0,<1.0.0",
    "pytest>=9.0.3,<9.1.0",
    "pytest-timeout>=2.0.0,<3.0.0",
    "mypy>=1.8.0,<2.0.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
anolis-telemetry-export = "telemetry_export.export_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telemetry_export"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests/integration"]
addopts = "--strict-markers -ra"
markers = [
  "integration: integration tests",
  "slow: long-running tests not required in default CI lane",
]
norecursedirs = ["build", ".venv"]
